# RF-for-shapez

./: .gitignore  environment.yml  pyproject.toml  readme.md  requirements-pip.txt  requirements.txt
docs/: Team document  (1).docx
src/: main.py
src/automation_script/: back_end.py  front_end.py  visualize.py
src/ppo_model/: Machine.py  PPO.py  ShapezEnv.py  getmap.py
src/rf_shapez.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/shapez/exe/exe/: Parameter.ini
src/shapez/shapez/shapez/: Belt.cpp  CMakeLists.txt  ChooseScene.cpp  Cutter.cpp  GameMap.h  HelpScene.cpp  HelpScene.h  PlayScene.cpp  Rotator.cpp  Rotator.h  RoundScene.cpp  RoundScene.h  ShopScene.cpp  StartScene.cpp  TransportRateCalculator.h  Trash.cpp  TunnelEntry.cpp  TunnelEntry.h  TunnelExit.cpp  TunnelExit.h  WinScene.cpp  WinScene.h  WindowControl.cpp  WindowControl.h  building.cpp  building.h  config.h  gamemap.cpp  hub.cpp  hub.h  main.cpp  miner.cpp  playscene.h  res.qrc  scene.cpp  timer.cpp  vec.h
src/shapez/shapez/shapez/res/: res.rar
src/shapez/shapez/shapez/res/belt_A/: Untitled-1 - 副本.py  Untitled-1.py
src/shapez/shapez/shapez/res/belt_A_S/: Untitled-1 - 副本.py  Untitled-1.py
src/shapez/shapez/shapez/res/belt_A_W/: Untitled-1 - 副本.py  Untitled-1.py
src/shapez/shapez/shapez/res/belt_D/: Untitled-1 - 副本.py  Untitled-1.py
src/shapez/shapez/shapez/res/belt_D_S/: Untitled-1 - 副本.py  Untitled-1.py
src/shapez/shapez/shapez/res/belt_D_W/: Untitled-1 - 副本.py  Untitled-1.py
src/shapez/shapez/shapez/res/belt_S/: Untitled-1 - 副本.py  Untitled-1.py
(+8 files in other folders)
