[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rf-shapez"
version = "0.1.0"
description = "RL for Shapez project with multiple packages"
authors = [{ name = "Tom Xue" }]
dependencies = [
    "torch",
    "stable-baselines3",
    "gymnasium",
    "pyqt5",
    "pyautogui",
    "pygame",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
rf-shapez-automation = "automation_script.front_end:main"
